--- a/app/views/index.handlebars
+++ b/app/views/index.handlebars
@@ -1,4 +1,15 @@
 <head>
-    <h1> Bienvenido </h1>
+    <img src="img/arrow.gif" style="float:right" /><div class="text-right"></div>
+    <br>
+    <br>
+    <h1> Bienvenido a Video Online Shopping</h1>
+
 </head>
 
+<body>
+  <img src="img/welcome.png"/>
+  <h3> Aqui podrás encontrar los mejores productos a los mejores precios</h3>
+  <footer class="footer">
+      <p>Conviertete en vendedor - Contáctanos: XXX@mail.com</p>
+  </footer>
+</body>
